# strata

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEMO.md  README.md  STRATA_PRODUCT_ARCHITECTURE.md  UX_SPEC.md  package-lock.json  package.json  turbo.json
apps/api/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 1974dec37174_initial_schema.py  9db6c6af1729_add_connector_run_event_counts.py  a3f1b2c4d5e6_capital_impact_mode.py  af1ddc754bba_add_connector_depth_tables.py  b1c2d3e4f5a6_add_lineage_tables.py  b4e2f3a7c8d9_add_decision_audit_tables.py  c5d6e7f8a9b0_discovery_candidates.py  d6e7f8a9b0c1_rbac_audit_log.py  e7f8a9b0c1d2_add_refresh_tokens.py  (+1 more)
apps/api/api/: index.py
apps/api/app/: config.py  database.py  logging_config.py  main.py
apps/api/app/api/: deps.py
apps/api/scripts/: seed_neon.py
apps/api/tests/: conftest.py  test_ai_scorecard_router.py  test_allocation_router.py  test_assets_router.py  test_audit.py  test_auth.py  test_benchmarks_router.py  test_board_router.py  test_capital_behavior_router.py  test_capital_efficiency_router.py  test_capital_governance.py  test_capital_impact_router.py  test_capital_projection_router.py  test_config.py  test_connector_depth.py  test_deps.py  test_display_config_router.py  test_endpoints.py  test_enforcement_router.py  test_lifecycle_router.py  test_lineage.py  test_marketplace_router.py  test_models.py  test_org_info_router.py  test_pricing_router.py  test_rbac.py  test_rbac_enforcement.py  test_simulate_router.py
(+391 files in other folders)
